fix: macro menu scancode dropdown panel visibility

--- a/packages/uhk-web/src/app/components/macro/item/macro-item.component.scss
+++ b/packages/uhk-web/src/app/components/macro/item/macro-item.component.scss
@@ -102,5 +102,4 @@
     padding-bottom: 0;
     border-radius: 0;
     border: none;
-    overflow: hidden;
 }
