--- a/packages/uhk-web/src/app/components/macro/list/macro-list.component.scss
+++ b/packages/uhk-web/src/app/components/macro/list/macro-list.component.scss
@@ -43,10 +43,6 @@ h1 {
     }
 }
 
-.list-group {
-    overflow: auto;
-}
-
 .macro__name {
     border-bottom: 2px dotted #999;
     padding: 0 0.5rem;
